--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <section class="user">
              <div>welcome</div>
              <div>amalia</div>
-        </section>
+        </section id="categorias">
         <div class="menu"><a href="views/students.html" target="_blank">alumnas</a></div>
         <div class="menu"><a href="views/evaluations.html" target="_blank">evaluaciones</a></div>
         <div class="menu"><a href="views/staff.html" target="_blank">staff</a></div>
     </section>
-    <script src="./js/data.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
 
