--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
+   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i" rel="stylesheet">
     <title>DATA-DASHBOARD</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta charset="UTF-8">
@@ -9,8 +10,8 @@
 <body>
     <nav id="logo">
         <img src="assets/images/logo-lab.png" alt="laboratoria"> <!--logo-->
-    </nav>   
-    <section id="global"> 
+    </nav>
+    <section id="global">
         <img id="girl" src="assets/images/girl.jpg" alt="perfil">
         <section class="user">
              <div>welcome</div>
@@ -24,4 +25,3 @@
     <script src="js/app.js"></script>
 </body>
 </html>
-
