--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
-   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i" rel="stylesheet">
     <title>DATA-DASHBOARD</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta charset="UTF-8">
@@ -14,8 +15,13 @@
     <section id="global">
         <img id="girl" src="assets/images/girl.jpg" alt="perfil">
         <section class="user">
-             <div>welcome</div>
-             <div>amalia</div>
+             <div class="container">
+                 <input id="txtEmail" type="email" placeholder="Email">
+                 <input id="txtPassword" type="password" placeholder="Contraseña">
+                 <button id="btnLogin" class="btn btn-action">Login</button>
+                 <button id="btnSignUp" class="btn btn-secondary">Registrarse</button>
+                 <button id="btnLogout" class="btn btn-action hide">Logout</button>
+             </div>
         </section id="categorias">
         <div class="menu"><a href="views/students.html" target="_blank">alumnas</a></div>
         <div class="menu"><a href="views/evaluations.html" target="_blank">evaluaciones</a></div>
@@ -23,5 +29,7 @@
     </section>
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/firebase.js"></script>
+    <!-- <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script> -->
 </body>
 </html>
